force-app/main/default/objects/VCG_CPQ_Page_Layout__c/VCG_CPQ_Page_Layout__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Quote Field Layout</label>
    <nameField>
        <displayFormat>FL{0000}</displayFormat>
        <label>Field Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ Quote Field Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>