force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Alt_Label__c.field-meta.xml
<CustomField>
    <fullName>Alt_Label__c</fullName>
    <inlineHelpText>Alternate display label.</inlineHelpText>
    <label>Alt. Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>