force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/AND_Display_If__c.field-meta.xml
<CustomField>
    <fullName>AND_Display_If__c</fullName>
    <inlineHelpText>Optional. If a formula is provided, this field will be displayed if the &quot;Display For Product Type&quot; matches AND this formula evaluates to TRUE. Formula evaluated against the Quote Product record.</inlineHelpText>
    <label>AND Display If</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>