force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Display_For_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_For_Product_Type__c</fullName>
    <description>The &quot;CPQ Display Type&quot; values for which this field will be displayed.  I.e. if &quot;Hardware&quot; is selected, this field/column will be displayed for any product where the &quot;CPQ Display Type&quot; value == &apos;Hardware&apos;.</description>
    <label>Display For Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Omnitracs MX:Hardware</fullName>
            </value>
            <value>
                <fullName>Omnitracs MX:Professional Services</fullName>
            </value>
            <value>
                <fullName>Omnitracs MX:Software</fullName>
            </value>
            <value>
                <fullName>Omnitracs US:Hardware</fullName>
            </value>
            <value>
                <fullName>Omnitracs US:Professional Services</fullName>
            </value>
            <value>
                <fullName>Omnitracs US:Software</fullName>
            </value>
            <value>
                <fullName>Roadnet:Fee</fullName>
            </value>
            <value>
                <fullName>Roadnet:Hardware</fullName>
            </value>
            <value>
                <fullName>Roadnet:Maintenance</fullName>
            </value>
            <value>
                <fullName>Roadnet:Maps</fullName>
            </value>
            <value>
                <fullName>Roadnet:Navigation</fullName>
            </value>
            <value>
                <fullName>Roadnet:Professional Services</fullName>
            </value>
            <value>
                <fullName>Roadnet:Software</fullName>
            </value>
            <value>
                <fullName>Sylectus:Fee</fullName>
            </value>
            <value>
                <fullName>Sylectus:Hardware</fullName>
            </value>
            <value>
                <fullName>Sylectus:Professional Services</fullName>
            </value>
            <value>
                <fullName>Sylectus:Software</fullName>
            </value>
            <value>
                <fullName>XRS Corporation:Fee</fullName>
            </value>
            <value>
                <fullName>XRS Corporation:Hardware</fullName>
            </value>
            <value>
                <fullName>XRS Corporation:Professional Services</fullName>
            </value>
            <value>
                <fullName>XRS Corporation:Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>