force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <inlineHelpText>&quot;Spacer&quot; only applicable in Header sections.</inlineHelpText>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Spacer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>