force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The field to display. Leave blank for spacers.</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>