force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Needs_Fields__c.field-meta.xml
<CustomField>
    <fullName>Needs_Fields__c</fullName>
    <inlineHelpText>List of semi-colon fields needed to evaluate this record (primarily the AND Display If formula).</inlineHelpText>
    <label>Needs Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>