force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Page_Section__c.field-meta.xml
<CustomField>
    <fullName>Page_Section__c</fullName>
    <label>Page Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Header Summary</fullName>
            </value>
            <value>
                <fullName>Header Detail</fullName>
            </value>
            <value>
                <fullName>Header Totals</fullName>
            </value>
            <value>
                <fullName>Edit Other Values</fullName>
            </value>
            <value>
                <fullName>Quote Details:New</fullName>
            </value>
            <value>
                <fullName>Quote Details:Renewal</fullName>
            </value>
            <value>
                <fullName>Quote Details:Extension</fullName>
            </value>
            <value>
                <fullName>Quote Details:Decommission</fullName>
            </value>
            <value>
                <fullName>Quote Details:Migration</fullName>
            </value>
            <value>
                <fullName>Quote Details:Upgrade</fullName>
            </value>
            <value>
                <fullName>Quote Details:Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>