force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this to make the field required. (Not applicable to Quote Totals section.)</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>