force-app/main/default/objects/VCG_CPQ_Page_Layout__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <description>A field for sorting in list views.</description>
    <formula>HYPERLINK(&apos;javascript:/*&apos; &amp; TEXT(Page_Section__c) &amp; &apos;-&apos; &amp; TEXT(10000+Order__c) &amp; &apos;*/void(0);&apos;, &apos;*&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort</label>
    <type>Text</type>
</CustomField>