force-app/main/default/objects/VCG_CPQ_Page_Layout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sort__c</columns>
    <columns>Page_Section__c</columns>
    <columns>Field__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Alt_Label__c</columns>
    <columns>Display_For_Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>